--- a/snapshot/config/darkerloadingscreen-client.toml
+++ b/snapshot/config/darkerloadingscreen-client.toml
@@ -2,6 +2,6 @@
 [general]
 	progress_start_color = "#FFFFFF"
 	logo_color = "#FFFFFF"
-	main_background_color = "#2B2B2B"
+	main_background_color = "#1E1E1E"
 	progress_end_color = "#FFFFFF"
 
