--- a/snapshot/config/packmenu.cfg
+++ b/snapshot/config/packmenu.cfg
@@ -29,7 +29,7 @@ general {
     B:"Draw Title"=true
 
     # If the resource pack is loaded from /resources instead of /resources.zip [default: true]
-    B:"Folder Pack"=false
+    B:"Folder Pack"=true
 
     # If the Panorama has a fade-in effect. [default: false]
     B:"Panorama Fade In"=false
