--- a/snapshot/config/packmenu.cfg
+++ b/snapshot/config/packmenu.cfg
@@ -17,7 +17,7 @@ general {
     B:"Draw Forge Info"=true
 
     # If the "Java Edition" text is drawn. [default: true]
-    B:"Draw Java Edition"=false
+    B:"Draw Java Edition"=true
 
     # If the vanilla panorama, and it's fade-in, are rendered.  Enabling this disables the use of the custom background options. [default: false]
     B:"Draw Panorama"=false
