--- a/snapshot/mods/customskinloader.toml
+++ b/snapshot/mods/customskinloader.toml
@@ -1,6 +1,6 @@
 name = "CustomSkinLoader"
 filename = "CustomSkinLoader_ForgeLegacy-14.13-SNAPSHOT-309.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3559/387/CustomSkinLoader_ForgeLegacy-14.13-SNAPSHOT-309.jar"
