--- a/snapshot/mods/fps-reducer.toml
+++ b/snapshot/mods/fps-reducer.toml
@@ -1,6 +1,6 @@
 name = "FPS Reducer"
 filename = "FpsReducer-forge-1.24-mc1.16.5.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3510/435/FpsReducer-forge-1.24-mc1.16.5.jar"
