--- a/release/mods/entityculling.toml
+++ b/release/mods/entityculling.toml
@@ -1,6 +1,6 @@
 name = "Entity Culling Fabric/Forge"
 filename = "entityculling-1.3.0.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3358/824/entityculling-1.3.0.jar"
