--- a/release/mods/shutup-experimental-settings.toml
+++ b/release/mods/shutup-experimental-settings.toml
@@ -1,6 +1,6 @@
 name = "Shutup Experimental Settings!"
 filename = "shutupexperimentalsettings-1.0.3.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3188/120/shutupexperimentalsettings-1.0.3.jar"
