--- a/release/mods/smooth-boot-forge.toml
+++ b/release/mods/smooth-boot-forge.toml
@@ -1,6 +1,6 @@
 name = "Smooth Boot (Forge)"
 filename = "smoothboot-forge-1.16.4-1.2.2.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3224/252/smoothboot-forge-1.16.4-1.2.2.jar"
