--- a/release/mods/configured.toml
+++ b/release/mods/configured.toml
@@ -1,6 +1,6 @@
 name = "Configured"
 filename = "configured-1.5.1-1.16.5.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://edge.forgecdn.net/files/3546/348/configured-1.5.1-1.16.5.jar"
