--- a/snapshot/mods/snow-real-magic.toml
+++ b/snapshot/mods/snow-real-magic.toml
@@ -1,13 +1,13 @@
-name = "Snow! Real Magic! ⛄"
-filename = "SnowRealMagic-1.16.4-2.8.3.jar"
+name = "Snow! Real Magic! ⛄ (Forge)"
+filename = "SnowRealMagic-1.16.4-2.9.0.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3564/737/SnowRealMagic-1.16.4-2.8.3.jar"
+url = "https://edge.forgecdn.net/files/3592/119/SnowRealMagic-1.16.4-2.9.0.jar"
 hash-format = "murmur2"
-hash = "2321190802"
+hash = "3992289913"
 
 [update]
 [update.curseforge]
-file-id = 3564737
+file-id = 3592119
 project-id = 308663
