--- a/release/mods/structurize.toml
+++ b/release/mods/structurize.toml
@@ -6,3 +6,8 @@ side = "both"
 url = "https://edge.forgecdn.net/files/3488/829/structurize-0.13.252-ALPHA-universal.jar"
 hash-format = "murmur2"
 hash = "1767677520"
+
+[update]
+[update.curseforge]
+file-id = 3488829
+project-id = 298744
