--- a/snapshot/mods/jei.toml
+++ b/snapshot/mods/jei.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items (JEI)"
-filename = "jei-1.16.5-7.7.1.139.jar"
+filename = "jei-1.16.5-7.7.1.144.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3590/83/jei-1.16.5-7.7.1.139.jar"
+url = "https://edge.forgecdn.net/files/3602/551/jei-1.16.5-7.7.1.144.jar"
 hash-format = "murmur2"
-hash = "2460059369"
+hash = "2233253951"
 
 [update]
 [update.curseforge]
-file-id = 3590083
+file-id = 3602551
 project-id = 238222
