--- a/snapshot/mods/werewolves-become-a-beast.toml
+++ b/snapshot/mods/werewolves-become-a-beast.toml
@@ -1,13 +1,13 @@
 name = "Werewolves - Become a Beast!"
-filename = "Werewolves-1.16.5-1.8-0.6.0-alpha+20220117-2146.jar"
+filename = "Werewolves-1.16.5-1.8-0.5.6.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3611/202/Werewolves-1.16.5-1.8-0.6.0-alpha+20220117-2146.jar"
+url = "https://edge.forgecdn.net/files/3469/427/Werewolves-1.16.5-1.8-0.5.6.jar"
 hash-format = "murmur2"
-hash = "960731578"
+hash = "1163357020"
 
 [update]
 [update.curseforge]
-file-id = 3611202
+file-id = 3469427
 project-id = 417851
