--- a/snapshot/mods/dynamic-view.toml
+++ b/snapshot/mods/dynamic-view.toml
@@ -1,6 +1,6 @@
 name = "Dynamic View[Forge/Fabric]"
 filename = "dynviewdist-2.0.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://edge.forgecdn.net/files/3358/883/dynviewdist-2.0.jar"
