--- a/snapshot/mods/customskinloader.toml
+++ b/snapshot/mods/customskinloader.toml
@@ -1,6 +1,6 @@
 name = "CustomSkinLoader"
 filename = "CustomSkinLoader_ForgeLegacy-14.13-SNAPSHOT-313.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://edge.forgecdn.net/files/3621/647/CustomSkinLoader_ForgeLegacy-14.13-SNAPSHOT-313.jar"
