--- a/snapshot/mods/dynamic-surroundings.toml
+++ b/snapshot/mods/dynamic-surroundings.toml
@@ -1,7 +1,7 @@
 name = "Dynamic Surroundings"
 filename = "DynamicSurroundings-1.16.5-4.0.5.0.jar"
 side = "client"
-optional = "true"
+optional = true
 
 [download]
 url = "https://edge.forgecdn.net/files/3502/320/DynamicSurroundings-1.16.5-4.0.5.0.jar"
