--- a/release/mods/screenshot-to-clipboard.toml
+++ b/release/mods/screenshot-to-clipboard.toml
@@ -2,6 +2,10 @@ name = "Screenshot to Clipboard (Forge)"
 filename = "screenshot-to-clipboard-1.0.7-forge.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+
 [download]
 url = "https://edge.forgecdn.net/files/3509/44/screenshot-to-clipboard-1.0.7-forge.jar"
 hash-format = "murmur2"
