--- a/snapshot/mods/ftb-backups-forge.toml
+++ b/snapshot/mods/ftb-backups-forge.toml
@@ -1,6 +1,11 @@
 name = "FTB Backups (Forge)"
 filename = "ftb-backups-2.1.2.2.jar"
 side = "both"
+
+[option]
+optional = true
+default = true
+
 [download]
 url = "https://edge.forgecdn.net/files/3482/306/ftb-backups-2.1.2.2.jar"
 hash-format = "murmur2"
