--- a/snapshot/mods/client-tweaks.toml
+++ b/snapshot/mods/client-tweaks.toml
@@ -2,6 +2,10 @@ name = "Client Tweaks"
 filename = "ClientTweaks_1.16.3-5.3.0.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+
 [download]
 url = "https://edge.forgecdn.net/files/3222/131/ClientTweaks_1.16.3-5.3.0.jar"
 hash-format = "murmur2"
