--- a/snapshot/mods/configured.toml
+++ b/snapshot/mods/configured.toml
@@ -2,6 +2,10 @@ name = "Configured"
 filename = "configured-1.5.1-1.16.5.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+
 [download]
 url = "https://edge.forgecdn.net/files/3546/348/configured-1.5.1-1.16.5.jar"
 hash-format = "murmur2"
