--- a/snapshot/mods/ftb-backups-forge.toml
+++ b/snapshot/mods/ftb-backups-forge.toml
@@ -1,7 +1,6 @@
 name = "FTB Backups (Forge)"
 filename = "ftb-backups-2.1.2.2.jar"
-side = "server"
-
+side = "both"
 [download]
 url = "https://edge.forgecdn.net/files/3482/306/ftb-backups-2.1.2.2.jar"
 hash-format = "murmur2"
