--- a/snapshot/mods/evilcraft.toml
+++ b/snapshot/mods/evilcraft.toml
@@ -1,13 +1,13 @@
 name = "EvilCraft"
-filename = "EvilCraft-1.16.5-1.1.12.jar"
+filename = "EvilCraft-1.16.5-1.1.14.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3620/539/EvilCraft-1.16.5-1.1.12.jar"
-hash-format = "murmur2"
-hash = "1279829666"
+url = "https://edge.forgecdn.net/files/3644/274/EvilCraft-1.16.5-1.1.14.jar"
+hash-format = "sha1"
+hash = "dbd8463b98df2b40e766a608da49547e634efc5e"
 
 [update]
 [update.curseforge]
-file-id = 3620539
+file-id = 3644274
 project-id = 74610
