--- a/snapshot/mods/sophisticated-backpacks.toml
+++ b/snapshot/mods/sophisticated-backpacks.toml
@@ -1,13 +1,13 @@
 name = "Sophisticated Backpacks"
-filename = "sophisticatedbackpacks-1.16.5-3.15.1.503.jar"
+filename = "sophisticatedbackpacks-1.16.5-3.15.7.531.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3597/548/sophisticatedbackpacks-1.16.5-3.15.1.503.jar"
-hash-format = "murmur2"
-hash = "2604339389"
+url = "https://edge.forgecdn.net/files/3640/351/sophisticatedbackpacks-1.16.5-3.15.7.531.jar"
+hash-format = "sha1"
+hash = "703a8d2074d3cd53660cedb19533cb35b92e8ccf"
 
 [update]
 [update.curseforge]
-file-id = 3597548
+file-id = 3640351
 project-id = 422301
