--- a/snapshot/mods/screenshot-to-clipboard.toml
+++ b/snapshot/mods/screenshot-to-clipboard.toml
@@ -5,7 +5,7 @@ side = "client"
 [option]
 optional = true
 default = true
-description = "Мод копирующий скриншот в буфер обмена при нажатии F2"
+description = "Any time you take a screenshot in the game, the image data is copied to the clipboard. You can then paste this anywhere (e.g. Discord) to upload the image and share it with others."
 
 [download]
 url = "https://edge.forgecdn.net/files/3509/44/screenshot-to-clipboard-1.0.7-forge.jar"
