--- a/snapshot/mods/mekanism-tools.toml
+++ b/snapshot/mods/mekanism-tools.toml
@@ -1,13 +1,13 @@
 name = "Mekanism Tools"
-filename = "MekanismTools-1.16.5-10.1.1.456.jar"
+filename = "MekanismTools-1.16.5-10.1.2.457.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3590/102/MekanismTools-1.16.5-10.1.1.456.jar"
-hash-format = "murmur2"
-hash = "1743726443"
+url = "https://edge.forgecdn.net/files/3659/392/MekanismTools-1.16.5-10.1.2.457.jar"
+hash-format = "sha1"
+hash = "4c55b475ea737e191f42ce5dd6ce2a3a03691fa5"
 
 [update]
 [update.curseforge]
-file-id = 3590102
+file-id = 3659392
 project-id = 268567
