--- a/snapshot/mods/mekanism.toml
+++ b/snapshot/mods/mekanism.toml
@@ -1,13 +1,13 @@
 name = "Mekanism"
-filename = "Mekanism-1.16.5-10.1.1.456.jar"
+filename = "Mekanism-1.16.5-10.1.2.457.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3590/99/Mekanism-1.16.5-10.1.1.456.jar"
-hash-format = "murmur2"
-hash = "1347632077"
+url = "https://edge.forgecdn.net/files/3659/389/Mekanism-1.16.5-10.1.2.457.jar"
+hash-format = "sha1"
+hash = "e7ec62394e8ac4b254c4e7cc57360903d7c35980"
 
 [update]
 [update.curseforge]
-file-id = 3590099
+file-id = 3659389
 project-id = 268560
