--- a/snapshot/mods/wireless-chargers.toml
+++ b/snapshot/mods/wireless-chargers.toml
@@ -1,13 +1,13 @@
 name = "Wireless Chargers"
-filename = "wirelesschargers-1.0.4-mc1.16.jar"
+filename = "wirelesschargers-1.0.5-mc1.16.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3636/497/wirelesschargers-1.0.4-mc1.16.jar"
-hash-format = "murmur2"
-hash = "818127823"
+url = "https://edge.forgecdn.net/files/3668/553/wirelesschargers-1.0.5-mc1.16.jar"
+hash-format = "sha1"
+hash = "4bcac94942eb88d1596fd43ce9bdb1c9f3565d78"
 
 [update]
 [update.curseforge]
-file-id = 3636497
+file-id = 3668553
 project-id = 510656
