--- a/snapshot/mods/chunk-loaders.toml
+++ b/snapshot/mods/chunk-loaders.toml
@@ -1,13 +1,13 @@
 name = "Chunk Loaders"
-filename = "chunkloaders-1.1.10-mc1.16.jar"
+filename = "chunkloaders-1.1.11-mc1.16.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3635/720/chunkloaders-1.1.10-mc1.16.jar"
-hash-format = "murmur2"
-hash = "3320152963"
+url = "https://edge.forgecdn.net/files/3668/574/chunkloaders-1.1.11-mc1.16.jar"
+hash-format = "sha1"
+hash = "0f17fb82310e2947c343006dd7f0a9260eeeddf6"
 
 [update]
 [update.curseforge]
-file-id = 3635720
+file-id = 3668574
 project-id = 402924
