--- a/snapshot/mods/customskinloader.toml
+++ b/snapshot/mods/customskinloader.toml
@@ -1,13 +1,13 @@
 name = "CustomSkinLoader"
-filename = "CustomSkinLoader_ForgeLegacy-14.13-SNAPSHOT-317.jar"
+filename = "CustomSkinLoader_ForgeLegacy-14.13.jar"
 side = "client"
 
 [download]
-url = "https://edge.forgecdn.net/files/3670/752/CustomSkinLoader_ForgeLegacy-14.13-SNAPSHOT-317.jar"
+url = "https://edge.forgecdn.net/files/3695/974/CustomSkinLoader_ForgeLegacy-14.13.jar"
 hash-format = "sha1"
-hash = "b7e33a77d830d0384b19e6c7b9bdaa5e21ea2cc3"
+hash = "27a76624ac18490755e3348eaa971c300740522f"
 
 [update]
 [update.curseforge]
-file-id = 3670752
+file-id = 3695974
 project-id = 286924
