--- a/snapshot/mods/materialis.toml
+++ b/snapshot/mods/materialis.toml
@@ -1,13 +1,13 @@
 name = "Materialis"
-filename = "materialis-1.16.5-2.5.0.jar"
+filename = "materialis-1.16.5-2.5.1.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3635/300/materialis-1.16.5-2.5.0.jar"
-hash-format = "murmur2"
-hash = "4269765693"
+url = "https://edge.forgecdn.net/files/3694/271/materialis-1.16.5-2.5.1.jar"
+hash-format = "sha1"
+hash = "73f943cc737277ed4e1dbfd021f24ef9bdb653a7"
 
 [update]
 [update.curseforge]
-file-id = 3635300
+file-id = 3694271
 project-id = 377652
