--- a/snapshot/mods/tinkers-construct.toml
+++ b/snapshot/mods/tinkers-construct.toml
@@ -1,13 +1,13 @@
 name = "Tinkers Construct"
-filename = "TConstruct-1.16.5-3.3.3.332.jar"
+filename = "TConstruct-1.16.5-3.3.4.335.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3631/989/TConstruct-1.16.5-3.3.3.332.jar"
-hash-format = "murmur2"
-hash = "2354767574"
+url = "https://edge.forgecdn.net/files/3695/126/TConstruct-1.16.5-3.3.4.335.jar"
+hash-format = "sha1"
+hash = "bfccf8cb255bc64101c0ae27cac7f3b386b88078"
 
 [update]
 [update.curseforge]
-file-id = 3631989
+file-id = 3695126
 project-id = 74072
