--- a/snapshot/mods/werewolves-become-a-beast.toml
+++ b/snapshot/mods/werewolves-become-a-beast.toml
@@ -1,13 +1,13 @@
 name = "Werewolves - Become a Beast!"
-filename = "Werewolves-1.16.5-1.8-0.6.0-beta.2.jar"
+filename = "Werewolves-1.16.5-1.8-0.6.0.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3661/184/Werewolves-1.16.5-1.8-0.6.0-beta.2.jar"
+url = "https://edge.forgecdn.net/files/3695/765/Werewolves-1.16.5-1.8-0.6.0.jar"
 hash-format = "sha1"
-hash = "d66b5921d8300462ae5eabd42aa18750b8b9d949"
+hash = "d155f1c04dbdcb709bb564fdcdd8cdeef634f215"
 
 [update]
 [update.curseforge]
-file-id = 3661184
+file-id = 3695765
 project-id = 417851
