--- a/snapshot/mods/farmers-delight.toml
+++ b/snapshot/mods/farmers-delight.toml
@@ -1,13 +1,13 @@
 name = "Farmer's Delight"
-filename = "FarmersDelight-1.16.5-0.5.4.jar"
+filename = "FarmersDelight-1.16.5-0.5.5.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3573/686/FarmersDelight-1.16.5-0.5.4.jar"
-hash-format = "murmur2"
-hash = "3457405985"
+url = "https://edge.forgecdn.net/files/3739/919/FarmersDelight-1.16.5-0.5.5.jar"
+hash-format = "sha1"
+hash = "de376e263ee87f9933b715822b31cf20ccda4129"
 
 [update]
 [update.curseforge]
-file-id = 3573686
+file-id = 3739919
 project-id = 398521
