--- a/snapshot/mods/relics-mod.toml
+++ b/snapshot/mods/relics-mod.toml
@@ -1,13 +1,13 @@
 name = "Relics"
-filename = "relics-0.3.4.1.jar"
+filename = "relics-0.3.4.2.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3630/25/relics-0.3.4.1.jar"
-hash-format = "murmur2"
-hash = "4219210903"
+url = "https://edge.forgecdn.net/files/3722/387/relics-0.3.4.2.jar"
+hash-format = "sha1"
+hash = "f7f4b902811c8fa4d42d35ce119a8742daf7f3c8"
 
 [update]
 [update.curseforge]
-file-id = 3630025
+file-id = 3722387
 project-id = 445274
