--- a/snapshot/mods/wawla.toml
+++ b/snapshot/mods/wawla.toml
@@ -1,13 +1,13 @@
 name = "Wawla - What Are We Looking At"
-filename = "WAWLA-1.16.5-8.0.8.jar"
+filename = "WAWLA-1.16.5-8.0.9.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3480/164/WAWLA-1.16.5-8.0.8.jar"
-hash-format = "murmur2"
-hash = "1459273229"
+url = "https://edge.forgecdn.net/files/3732/265/WAWLA-1.16.5-8.0.9.jar"
+hash-format = "sha1"
+hash = "a81613367c0dd72ea126e5708a4ecf3a5308595e"
 
 [update]
 [update.curseforge]
-file-id = 3480164
+file-id = 3732265
 project-id = 224712
