--- a/snapshot/mods/enigmatic-legacy.toml
+++ b/snapshot/mods/enigmatic-legacy.toml
@@ -1,13 +1,13 @@
 name = "Enigmatic Legacy"
-filename = "EnigmaticLegacy-2.11.11.jar"
+filename = "EnigmaticLegacy-2.11.12.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3608/374/EnigmaticLegacy-2.11.11.jar"
-hash-format = "murmur2"
-hash = "3443347367"
+url = "https://edge.forgecdn.net/files/3758/580/EnigmaticLegacy-2.11.12.jar"
+hash-format = "sha1"
+hash = "71454ec586895fde296b594ced9c029833f27256"
 
 [update]
 [update.curseforge]
-file-id = 3608374
+file-id = 3758580
 project-id = 336184
