--- a/snapshot/mods/placebo.toml
+++ b/snapshot/mods/placebo.toml
@@ -1,13 +1,13 @@
 name = "Placebo"
-filename = "Placebo-1.16.5-4.6.1.jar"
+filename = "Placebo-1.16.5-4.7.0.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3536/806/Placebo-1.16.5-4.6.1.jar"
-hash-format = "murmur2"
-hash = "239807166"
+url = "https://edge.forgecdn.net/files/3750/838/Placebo-1.16.5-4.7.0.jar"
+hash-format = "sha1"
+hash = "2c616fccc1888f90ddf60d947aa97c94481a33d7"
 
 [update]
 [update.curseforge]
-file-id = 3536806
+file-id = 3750838
 project-id = 283644
