--- a/snapshot/mods/atum.toml
+++ b/snapshot/mods/atum.toml
@@ -1,13 +1,13 @@
 name = "Atum 2: Return to the Sands"
-filename = "Atum-1.16.5-2.2.10.jar"
+filename = "Atum-1.16.5-2.2.11.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3640/9/Atum-1.16.5-2.2.10.jar"
+url = "https://edge.forgecdn.net/files/3760/512/Atum-1.16.5-2.2.11.jar"
 hash-format = "sha1"
-hash = "3215a159fa0eac8eabce14a377afd994958aa2af"
+hash = "b8d797fc8e7be6f83aae5841a36fc245bcdd570d"
 
 [update]
 [update.curseforge]
-file-id = 3640009
+file-id = 3760512
 project-id = 59621
