--- a/snapshot/mods/cloth-config-forge.toml
+++ b/snapshot/mods/cloth-config-forge.toml
@@ -1,13 +1,13 @@
-name = "Cloth Config API (Forge)"
-filename = "cloth-config-4.14.54-forge.jar"
+name = "Cloth Config API (Fabric/Forge)"
+filename = "config-2-4.6.0.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3641/85/cloth-config-4.14.54-forge.jar"
+url = "https://edge.forgecdn.net/files/3761/405/config-2-4.6.0.jar"
 hash-format = "sha1"
-hash = "1b78fd78e0239b30983d563fa9f7d2799a3b0dd9"
+hash = "5c341686b7a3e850195ae7459a6d4822562f420b"
 
 [update]
 [update.curseforge]
-file-id = 3641085
+file-id = 3761405
 project-id = 348521
