--- a/snapshot/1.16.5/mods/moving-elevators.toml
+++ b/snapshot/1.16.5/mods/moving-elevators.toml
@@ -1,13 +1,13 @@
 name = "Moving Elevators"
-filename = "movingelevators-1.3.6-mc1.16.jar"
+filename = "movingelevators-1.3.7-forge-mc1.16.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3734/149/movingelevators-1.3.6-mc1.16.jar"
+url = "https://edge.forgecdn.net/files/3773/765/movingelevators-1.3.7-forge-mc1.16.jar"
 hash-format = "sha1"
-hash = "5b22b91486c238f03b38344d516d883b8993cea0"
+hash = "919e0413396986be911ca929c6d708c42bb61d67"
 
 [update]
 [update.curseforge]
-file-id = 3734149
+file-id = 3773765
 project-id = 373051
