--- a/snapshot/1.16.5/mods/configured.toml
+++ b/snapshot/1.16.5/mods/configured.toml
@@ -1,13 +1,13 @@
 name = "Configured"
-filename = "configured-1.5.1-1.16.5.jar"
+filename = "configured-1.5.2-1.16.5.jar"
 side = "client"
 
 [download]
-url = "https://edge.forgecdn.net/files/3546/348/configured-1.5.1-1.16.5.jar"
-hash-format = "murmur2"
-hash = "3114506489"
+url = "https://edge.forgecdn.net/files/3780/620/configured-1.5.2-1.16.5.jar"
+hash-format = "sha1"
+hash = "482fbe102176fdd8742738b2341e3eaf097499fb"
 
 [update]
 [update.curseforge]
-file-id = 3546348
+file-id = 3780620
 project-id = 457570
