--- a/snapshot/1.16.5/mods/advanced-peripherals.toml
+++ b/snapshot/1.16.5/mods/advanced-peripherals.toml
@@ -1,13 +1,13 @@
 name = "Advanced Peripherals"
-filename = "advancedperipherals-1.16.5-0.7.7.1r.jar"
+filename = "advancedperipherals-1.16.5-0.7.8r.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3615/760/advancedperipherals-1.16.5-0.7.7.1r.jar"
-hash-format = "murmur2"
-hash = "2277142421"
+url = "https://edge.forgecdn.net/files/3784/458/advancedperipherals-1.16.5-0.7.8r.jar"
+hash-format = "sha1"
+hash = "3525d1de7ea24f0c52fee28fe144761ac4d6a1ad"
 
 [update]
 [update.curseforge]
-file-id = 3615760
+file-id = 3784458
 project-id = 431725
