--- a/snapshot/1.16.5/mods/apotheosis.toml
+++ b/snapshot/1.16.5/mods/apotheosis.toml
@@ -1,13 +1,13 @@
 name = "Apotheosis"
-filename = "Apotheosis-1.16.5-4.8.99D.jar"
+filename = "Apotheosis-1.16.5-4.8.99F.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3778/61/Apotheosis-1.16.5-4.8.99D.jar"
+url = "https://edge.forgecdn.net/files/3779/410/Apotheosis-1.16.5-4.8.99F.jar"
 hash-format = "sha1"
-hash = "2a52d06d54e93e5f346fad6eba56554e7d7fa4e9"
+hash = "3614637338b83c6bb80e5953e34a815347ea458a"
 
 [update]
 [update.curseforge]
-file-id = 3778061
+file-id = 3779410
 project-id = 313970
