--- a/snapshot/1.16.5/mods/relics-mod.toml
+++ b/snapshot/1.16.5/mods/relics-mod.toml
@@ -1,13 +1,13 @@
 name = "Relics"
-filename = "relics-0.3.4.2.jar"
+filename = "relics-1.16.5-0.3.4.3.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3722/387/relics-0.3.4.2.jar"
+url = "https://edge.forgecdn.net/files/3786/98/relics-1.16.5-0.3.4.3.jar"
 hash-format = "sha1"
-hash = "f7f4b902811c8fa4d42d35ce119a8742daf7f3c8"
+hash = "d8980cc6930930272de4188e69a523cd459a3614"
 
 [update]
 [update.curseforge]
-file-id = 3722387
+file-id = 3786098
 project-id = 445274
