--- a/mods/minecolonies.toml
+++ b/mods/minecolonies.toml
@@ -1,13 +1,13 @@
 name = "MineColonies"
-filename = "minecolonies-1.16.5-1.0.716-ALPHA.jar"
+filename = "minecolonies-1.16.5-1.0.763-ALPHA.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3784/222/minecolonies-1.16.5-1.0.716-ALPHA.jar"
 hash-format = "sha1"
-hash = "ce419ef1797877bcceff4ac902c5fdbeb7b11c43"
+hash = "05025e648eb4c1395d4b6b0aa789ea2b2a64ebdf"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3784222
+file-id = 3801436
 project-id = 245506
