--- a/mods/geckolib.toml
+++ b/mods/geckolib.toml
@@ -1,13 +1,13 @@
 name = "GeckoLib"
-filename = "geckolib-forge-1.16.5-3.0.74.jar"
+filename = "geckolib-forge-1.16.5-3.0.71.jar"
 side = "both"
 
 [download]
+url = "https://edge.forgecdn.net/files/3785/775/geckolib-forge-1.16.5-3.0.71.jar"
 hash-format = "sha1"
-hash = "f5b2ea848904862d653f7817cab59c7d95c5d00d"
-mode = "metadata:curseforge"
+hash = "e1e212ea3f54037584e48938b8936879dcc3d8fc"
 
 [update]
 [update.curseforge]
-file-id = 3819094
+file-id = 3785775
 project-id = 388172
