--- a/mods/corail-tombstone.toml
+++ b/mods/corail-tombstone.toml
@@ -1,13 +1,13 @@
 name = "Corail Tombstone"
-filename = "tombstone-6.7.6-1.16.5.jar"
+filename = "tombstone-6.7.5-1.16.5.jar"
 side = "both"
 
 [download]
+url = "https://edge.forgecdn.net/files/3773/949/tombstone-6.7.5-1.16.5.jar"
 hash-format = "sha1"
-hash = "eb8982cd3f687e6ce7f515f8732eabcc59cbd503"
-mode = "metadata:curseforge"
+hash = "de7cda8d4ffcaefec2a08ee4d194b5ec471abfd0"
 
 [update]
 [update.curseforge]
-file-id = 3800673
+file-id = 3773949
 project-id = 243707
