Remove .zip from .ignore files

--- a/.packwizignore
+++ b/.packwizignore
@@ -9,8 +9,8 @@
 # Exclude README
 /README.md
 
-# Exclude exported CurseForge zip files
-*.zip
+# Exclude exported Modrinth modpacks
+*.mrpack
 
 # Exclude exported Modrinth modpacks
 *.mrpack
