--- a/mods/structurize.pw.toml
+++ b/mods/structurize.pw.toml
@@ -1,13 +1,13 @@
 name = "Structurize"
-filename = "structurize-1.16.5-1.0.410-ALPHA.jar"
+filename = "structurize-1.16.5-1.0.392-RELEASE.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "2904df63de14136f8d641fe3402963bb1a0358b3"
+hash = "a678c03b2a343bbf3b0684782091100c64801803"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3814088
+file-id = 3757258
 project-id = 298744
