--- a/mods/corail-tombstone.toml
+++ b/mods/corail-tombstone.toml
@@ -1,13 +1,13 @@
 name = "Corail Tombstone"
-filename = "tombstone-6.7.5-1.16.5.jar"
+filename = "tombstone-6.7.7-1.16.5.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3773/949/tombstone-6.7.5-1.16.5.jar"
 hash-format = "sha1"
-hash = "de7cda8d4ffcaefec2a08ee4d194b5ec471abfd0"
+hash = "8f72468714d471eda9cb5e034fa9d793d6e6dc46"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3773949
+file-id = 3813701
 project-id = 243707
