--- a/mods/geckolib.toml
+++ b/mods/geckolib.toml
@@ -1,13 +1,13 @@
 name = "GeckoLib"
-filename = "geckolib-forge-1.16.5-3.0.71.jar"
+filename = "geckolib-forge-1.16.5-3.0.75.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3785/775/geckolib-forge-1.16.5-3.0.71.jar"
 hash-format = "sha1"
-hash = "e1e212ea3f54037584e48938b8936879dcc3d8fc"
+hash = "e58a51b4a58bab3104f0474e7baea1a2e34e5855"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3785775
+file-id = 3819969
 project-id = 388172
