--- a/mods/structurize.pw.toml
+++ b/mods/structurize.pw.toml
@@ -3,9 +3,9 @@ filename = "structurize-1.16.5-1.0.392-RELEASE.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3757/258/structurize-1.16.5-1.0.392-RELEASE.jar"
 hash-format = "sha1"
 hash = "a678c03b2a343bbf3b0684782091100c64801803"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
