--- a/mods/customskinloader.pw.toml
+++ b/mods/customskinloader.pw.toml
@@ -1,6 +1,6 @@
 name = "CustomSkinLoader"
 filename = "CustomSkinLoader_ForgeLegacy-14.14-SNAPSHOT-323.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
