--- a/mods/better-mods-button.pw.toml
+++ b/mods/better-mods-button.pw.toml
@@ -1,6 +1,6 @@
 name = "Better Mods Button"
 filename = "BetterModsButton-v1.0.5-1.16.5-Forge.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
