--- a/mods/dynamic-surroundings.pw.toml
+++ b/mods/dynamic-surroundings.pw.toml
@@ -1,6 +1,6 @@
 name = "Dynamic Surroundings"
 filename = "DynamicSurroundings-1.16.5-4.0.5.0.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
