--- a/mods/fps-reducer.pw.toml
+++ b/mods/fps-reducer.pw.toml
@@ -1,6 +1,6 @@
 name = "FPS Reducer"
 filename = "FpsReducer-forge-1.24-mc1.16.5.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
