--- a/mods/seamless-loading-screen-forge.pw.toml
+++ b/mods/seamless-loading-screen-forge.pw.toml
@@ -1,6 +1,6 @@
 name = "Seamless Loading Screen (Forge)"
 filename = "seamless_loading_screen-1.16.5-1.1.7.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
