Squashed commit of the following:
commit 154221f2e38dc7abbd86cca3d7e66ea06328449e
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Sat Aug 27 15:15:48 2022 +0200

    Configure CSL

commit 57bfac8c11f15a480e6208fb5cc411614882aa5d
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Sat Aug 27 15:10:51 2022 +0200

    Remove First Aid and made Gender mod optional

commit 0227269bc7c6175b30f0705850cb37fff2491ef8
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Sat Aug 27 15:06:14 2022 +0200

    Add translations for AdChimneys

commit bab429ab51969a0a718d39518d2a76335a828a40
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Sat Aug 27 14:38:10 2022 +0200

    Add mods

commit c78d8a2939f2718c4f0e2e97ee59e107cfc2c179
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Sat Aug 27 14:13:42 2022 +0200

    Add fancymenu

commit 9377de3786a77af8a2cd0f982344cfe35e7bfef0
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Sat Aug 27 12:38:22 2022 +0200

    Remove packmenu files and update mods

commit c9f85d26e269f484630f7eba8721754a79ce1148
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Fri Aug 26 21:09:46 2022 +0200

    Change mod sides and and add another packmenu

commit 104965f6ceaba5ac1362d22372b43849d348c88a
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Thu Aug 25 21:11:52 2022 +0200

    Change version to 3.0.1

commit 8f6fd71a893ddfe4b9003f6618f792b0dca057ed
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Thu Aug 25 20:10:07 2022 +0200

    Remove packmenu

commit 121b05698fbfce5c89af105fce8e8e165c138f64
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Thu Aug 25 19:44:09 2022 +0200

    Add Supplementaries and Name Pain

commit 9fcbb69d0c3a9aacb066841382236452de115d9e
Author: Дмитрий Деньченко <dima.den4enko.ok@gmail.com>
Date:   Thu Aug 25 16:51:36 2022 +0200

    Remove Default Options

commit 0c321ad24e286013f3be7ac369005bad243

--- a/mods/customskinloader.pw.toml
+++ b/mods/customskinloader.pw.toml
@@ -1,13 +1,13 @@
 name = "CustomSkinLoader"
-filename = "CustomSkinLoader_ForgeActive-14.14-SNAPSHOT-345.jar"
-side = "both"
+filename = "CustomSkinLoader_ForgeActive-14.14-SNAPSHOT-346.jar"
+side = "client"
 
 [download]
 hash-format = "sha1"
-hash = "17290e1bdc30766cb170f760d9cd73837280db0f"
+hash = "fca92bf0d68b02b55919732574256b90b70ad27a"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3938318
+file-id = 3953626
 project-id = 286924
