--- a/mods/camera-overhaul-forge.pw.toml
+++ b/mods/camera-overhaul-forge.pw.toml
@@ -1,6 +1,6 @@
 name = "CameraOverhaul (Forge)"
 filename = "cameraoverhaul-1.0-1.18.2.jar"
-side = "both"
+side = "client"
 
 [option]
 optional = true
