--- a/mods/client-tweaks.pw.toml
+++ b/mods/client-tweaks.pw.toml
@@ -1,6 +1,6 @@
 name = "Client Tweaks"
 filename = "clienttweaks-forge-1.18.1-7.1.0.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
