Revert "Squashed commit of the following:"
This reverts commit 5c587089d79bfc5e15b49e5df211410c7a901742.

--- a/mods/better-mods-button.pw.toml
+++ b/mods/better-mods-button.pw.toml
@@ -1,6 +1,6 @@
 name = "Better Mods Button"
 filename = "BetterModsButton-v3.2.2-1.18.2-Forge.jar"
-side = "client"
+side = "both"
 
 [download]
 hash-format = "sha1"
