--- a/mods/fps-reducer.pw.toml
+++ b/mods/fps-reducer.pw.toml
@@ -1,6 +1,6 @@
 name = "FPS Reducer"
 filename = "FpsReducer2-forge-1.18.2-2.0.jar"
-side = "client"
+side = "both"
 
 [download]
 hash-format = "sha1"
