--- a/mods/name-pain.pw.toml
+++ b/mods/name-pain.pw.toml
@@ -1,6 +1,6 @@
 name = "Name Pain"
 filename = "namepain-1.4.1 forge-1.18.x.jar"
-side = "client"
+side = "both"
 
 [download]
 hash-format = "sha1"
