--- a/mods/screenshot-to-clipboard.pw.toml
+++ b/mods/screenshot-to-clipboard.pw.toml
@@ -1,6 +1,6 @@
 name = "Screenshot to Clipboard (Forge)"
 filename = "screenshot-to-clipboard-1.0.9-forge.jar"
-side = "client"
+side = "both"
 
 [download]
 hash-format = "sha1"
