--- a/mods/load-my-resources-forge.pw.toml
+++ b/mods/load-my-resources-forge.pw.toml
@@ -1,6 +1,6 @@
 name = "Load My Resources [Forge]"
 filename = "loadmyresources_1.0.1_MC_1.18.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
