--- a/mods/enchantment-descriptions.pw.toml
+++ b/mods/enchantment-descriptions.pw.toml
@@ -1,6 +1,6 @@
 name = "Enchantment Descriptions"
 filename = "EnchantmentDescriptions-Forge-1.18.2-10.0.9.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
