--- a/mods/vampirism-integrations.pw.toml
+++ b/mods/vampirism-integrations.pw.toml
@@ -1,13 +1,13 @@
 name = "Vampirism Integrations"
-filename = "VampirismIntegrations-1.18.2-1.7.0-alpha+20220820-2317.jar"
+filename = "VampirismIntegrations-1.18.2-1.7.0-beta.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "0063d5719767fe1b8860f95f64281c5831831564"
+hash = "0d730d0b1149f8150507df8597162f777c4c49c2"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3944036
+file-id = 3991501
 project-id = 282433
